# SolarCarTraining

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt
.cache/clangd/index/: Aerobody.cpp.B078F46F77A6E283.idx  Aerobody.h.E68EC0B84F0D42DA.idx  AerobodyTests.cpp.6676392DF0D19F34.idx  Array.cpp.B1C3D8DCCFDCE9E5.idx  Array.h.84D230E2E8091A68.idx  ArrayTests.cpp.B4E8DAB21522BA4C.idx  Battery.cpp.C8228FE1E055A253.idx  Battery.h.4B2D55526047C71A.idx  BatteryState.cpp.A1F826F648902920.idx  BatteryState.h.E643CD0FF1CE13B2.idx  BatteryTests.cpp.9C8EE3FC25BE0FFC.idx  Motor.cpp.C12C7C5338AC32F3.idx  Motor.h.864297044E783C9F.idx  MotorTests.cpp.6DCE8D983DA7C3BF.idx  Tire.cpp.4CA60D2445DAD986.idx  Tire.h.B38B603861ADE59D.idx  TireTests.cpp.A801B455E23B73F4.idx  VelocityVector.hpp.E24246A069A7A29F.idx  minisim.cpp.24459C9FE1521604.idx
.github/workflows/: build_and_test.yml
Aerobody/: Aerobody.cpp  Aerobody.h  AerobodyTests.cpp  VelocityVector.cpp  VelocityVector.hpp
Array/: Array.h  CMakeLists.txt
Battery/: Battery.cpp  Battery.h  BatteryState.cpp  BatteryState.h  CMakeLists.txt
Motor/: Motor.cpp
cmake/: catch2.cmake
cmake/Aerobody/: CMakeLists.txt  VelocityVector.hpp
data/Cars/: mini-car.toml
data/Route/: route.csv
data/Schedule/August/: Schedule2007+7.toml  Schedule2007-7.toml  Schedule2007.toml  Schedule2008+7.toml  Schedule2008-7.toml  Schedule2008.toml  Schedule2009+7.toml  Schedule2009-7.toml  Schedule2009.toml  Schedule2010+7.toml  Schedule2010-7.toml  Schedule2010.toml  Schedule2011+7.toml  Schedule2011-7.toml  Schedule2011.toml  Schedule2012+7.toml  Schedule2012-7.toml  Schedule2012.toml  Schedule2013+7.toml  Schedule2013-7.toml  Schedule2013.toml  Schedule2014+7.toml  Schedule2014-7.toml  Schedule2014.toml  Schedule2015+7.toml  Schedule2015-7.toml  Schedule2015.toml  Schedule2016+7.toml  Schedule2016-7.toml  Schedule2016.toml  Schedule2017+7.toml  Schedule2017-7.toml  Schedule2017.toml  Schedule2018+7.toml  Schedule2018-7.toml  Schedule2018.toml  Schedule2019+7.toml  Schedule2019-7.toml  Schedule2019.toml  Schedule2020+7.toml  (+8 more)
data/Schedule/October/: Schedule2007+7.toml  Schedule2007-7.toml  Schedule2007.toml  Schedule2008+7.toml  Schedule2008-7.toml  Schedule2008.toml  Schedule2009+7.toml  Schedule2009-7.toml  Schedule2009.toml  Schedule2010+7.toml  Schedule2010-7.toml  Schedule2010.toml  Schedule2011+7.toml  Schedule2011-7.toml  Schedule2011.toml  Schedule2012+7.toml  Schedule2012-7.toml  Schedule2012.toml  Schedule2013+7.toml  Schedule2013-7.toml  Schedule2013.toml  Schedule2014+7.toml  Schedule2014-7.toml  Schedule2014.toml  Schedule2015+7.toml  Schedule2015-7.toml  Schedule2015.toml  Schedule2016+7.toml  Schedule2016-7.toml  Schedule2016.toml  Schedule2017+7.toml  Schedule2017-7.toml  Schedule2017.toml  Schedule2018+7.toml  Schedule2018-7.toml  Schedule2018.toml  Schedule2019+7.toml  Schedule2019-7.toml  Schedule2019.toml  Schedule2020+7.toml  (+9 more)
data/Stations/: australia_stations.csv
src/: CMakeLists.txt  minisim.cpp
src/ConfigFile/: CMakeLists.txt  ConfigFile.cpp  ConfigFile.h
src/DataClasses/: CMakeLists.txt  GeographicalCoordinate.cpp  GeographicalCoordinate.h
src/Optimizer/: BinarySearchOptimizer.cpp  BinarySearchOptimizer.h  CMakeLists.txt  LinearSearchOptimizer.cpp  LinearSearchOptimizer.h  Optimizer.cpp  Optimizer.h
src/RaceConfig/: CMakeLists.txt  RaceConfig.h  RaceConfigConstants.h
src/RaceConfig/RaceSchedule/: CMakeLists.txt  RaceSchedule.cpp  RaceSchedule.h  RaceScheduleConstants.h
src/RaceConfig/Route/: CMakeLists.txt  Route.cpp  Route.h  RouteConstants.h  RouteSegment.h
src/RaceConfig/SolarPosition/: CMakeLists.txt  SolarPosition.cpp  SolarPosition.h
src/RaceConfig/Weather/: CMakeLists.txt  Weather.cpp  Weather.h  WeatherConstants.h  WeatherDataPoint.cpp  WeatherDataPoint.h
src/RaceConfig/WeatherStations/: CMakeLists.txt  WeatherStationConstants.h  WeatherStations.cpp  WeatherStations.h
src/RaceRunner/: CMakeLists.txt  RaceRunner.cpp  RaceRunner.h  RaceRunnerTests.cpp
src/RaceSegmentRunner/: CMakeLists.txt  RaceSegmentRunner.cpp  RaceSegmentRunner.h  RaceSegmentRunnerTests.cpp
src/SolarCar/: CMakeLists.txt  SolarCar.cpp  SolarCar.h
src/SolarCar/Aerobody/: Aerobody.cpp  Aerobody.h  AerobodyTests.cpp  CMakeLists.txt  VelocityVector.cpp  VelocityVector.h  VelocityVector.hpp
src/SolarCar/Array/: Array.cpp  ArrayTests.cpp
src/SolarCar/Battery/: Battery.cpp  BatteryTests.cpp
src/SolarCar/Motor/: CMakeLists.txt  Motor.cpp  Motor.h  MotorTests.cpp
src/SolarCar/Tire/: CMakeLists.txt  Tire.cpp  Tire.h  TireTests.cpp
src/Tools/: CMakeLists.txt  Conversions.h  FileTools.cpp  FileTools.h  Parsing.cpp  Parsing.h  PhysicalConstants.h  RootBinarySearch.cpp  RootBinarySearch.h  RootDirectory.cpp  RootDirectory.h.in  TimeTools.cpp  TimeTools.h
